examples/fail/numop_str_add.hax
module ZZZ::NumOpStrAdd;

sub main() -> int {
  var Str $s := "hi";
  var int $n := 3;
  return $n + $s;
}
